# zotero-rag

./: .gitignore  MANIFEST.in  README.md  RELEASE_GUIDE.md  __init__.py  build_and_publish.sh  build_executable.py  fast_pdf_opener.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  zotero-rag.spec
.github/workflows/: build-executables.yml
