[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-rag"
description = "RAG system for searching Zotero PDF library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["zotero", "rag", "pdf", "search", "retrieval", "nlp", "academic", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.3.0",
    "PyPDF2>=3.0.1",
    "numpy>=1.24.0",
]
dynamic = ["version"]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "faiss-gpu>=1.7.4",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/zotero-rag"
Documentation = "https://github.com/yourusername/zotero-rag#readme"
Repository = "https://github.com/yourusername/zotero-rag"
"Bug Reports" = "https://github.com/yourusername/zotero-rag/issues"

[project.scripts]
zotero-rag = "zotero_rag:main"
zrag = "zotero_rag:main"

[tool.setuptools]
packages = ["zotero_rag"]

[tool.setuptools.dynamic]
version = {attr = "zotero_rag.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
