[metadata]
name = zotero-rag
version = attr: zotero_rag.__version__
author = Your Name
author_email = your.email@example.com
description = RAG system for searching Zotero PDF library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/zotero-rag
project_urls =
    Bug Reports = https://github.com/yourusername/zotero-rag/issues
    Source = https://github.com/yourusername/zotero-rag
    Documentation = https://github.com/yourusername/zotero-rag#readme
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Indexing
    Topic :: Utilities
keywords = zotero, rag, pdf, search, retrieval, nlp, academic, research

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    sentence-transformers>=2.2.2
    faiss-cpu>=1.7.4
    scikit-learn>=1.3.0
    PyPDF2>=3.0.1
    numpy>=1.24.0

[options.packages.find]
exclude =
    tests*

[options.extras_require]
gpu =
    torch>=2.0.0
    faiss-gpu>=1.7.4
dev =
    pytest>=7.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950

[options.entry_points]
console_scripts =
    zotero-rag = zotero_rag:main
    zrag = zotero_rag:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
